[package]
name = "libbyreads-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
blocking = "1.6.1"
futures = "0.3.30"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
scraper = "0.20.0"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
urlencoding = "2.1.3"
